Change various move constructors to be noexcept = default.

Declaring move constructors and assignment operators noexcept
allows STL containers to use moves instead of copies, which is
generally more efficient.

Previously, there were compiler issues that prevented this from
working [1]. They seem to have mysteriously fixed themselves
and testing on https://godbolt.org/g/TqfqtK seems to indicate that
the previously highlighted problematic test cases now work.

[1] https://groups.google.com/a/chromium.org/forum/#!topic/cxx/ze4WJFg7RvU

Bug: 706963
Change-Id: Ieb73b4c53ab4235838265f1d968d2a57aa34a737
Reviewed-on: https://chromium-review.googlesource.com/1003872
Reviewed-by: John Budorick <jbudorick@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549678}
Former-commit-id: 62ede92bcf2a4ab69de40d55ef7d176771f6d597