components/query_parser/snippet.cc
@@ -210,10 +210,7 @@ Snippet::Snippet() {
 
 Snippet::Snippet(const Snippet& other) = default;
 
-// TODO(bug 706963) this should be implemented as "= default" when Android
-// toolchain is updated.
-Snippet::Snippet(Snippet&& other) noexcept
-    : text_(std::move(other.text_)), matches_(std::move(other.matches_)) {}
+Snippet::Snippet(Snippet&& other) noexcept = default;
 
 Snippet::~Snippet() {
 }
